commit everything commit

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "salesvisits",
+  "name": "my-final-project",
   "version": "1.0.0",
   "description": "A merchandising",
   "main": "index.js",
