--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "my-final-project",
   "version": "1.0.0",
+  "repository": {
+    "url": "git+https://github.com/stellarawat/my-final-project"
+  },
   "description": "A merchandising",
   "main": "index.js",
   "scripts": {
@@ -8,7 +11,9 @@
     "build": "webpack --mode=development",
     "webpackServer": "webpack-dev-server --open --mode=development",
     "lint": "eslint src --ext .js",
-    "start": "npm run build && npm run webpackServer"
+    "start": "npm run build && npm run webpackServer",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "author": "",
   "license": "ISC",
@@ -19,6 +24,7 @@
     "css-loader": "^6.8.1",
     "eslint": "^8.42.0",
     "eslint-webpack-plugin": "^4.0.1",
+    "gh-pages": "^6.1.1",
     "html-loader": "^4.2.0",
     "html-webpack-plugin": "^5.5.3",
     "jest": "^29.5.0",
